[package]
name = "log_reader"
version = "0.1.0"
authors = ["Sebastian Österlund <s.osterlund@vu.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde="1.0"
serde_derive = "1.0"
serde_json = "1.0"

angora_common = {path = "../../common" }
runtime = {path = "../../runtime" }


